[tool.poetry]
name = "jejudata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
